server/load-balancer-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: load-balancer-server
  namespace: losstracker
  labels:
    app: loss-tracker-server
spec:
  #type: LoadBalancer
  selector:
    app: loss-tracker-server
  ports: 
  - port: 3005
    targetPort: 5005
    #nodePort: 31004
    protocol: TCP
