server/loss-tracker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loss-tracker-ingress
  namespace: losstracker
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http: 
      paths: 
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: load-balancer-server
            port:
              number: 3005
